Simplify server_info plugin, fix pagination margin, add sideInfo z-index
Rewrite server_info.rb to be more concise and replace 0.0.0.0 with
localhost in Jekyll log output. Fix pagination nav using margin instead
of margin-top. Add z-index to sideInfo on desktop for proper stacking.

--- a/_sass/components/_pagination.scss
+++ b/_sass/components/_pagination.scss
@@ -12,7 +12,7 @@
 .nds-pagination-nav {
   --_pagination-margin-top: var(--pagination-margin-top, var(--spacing-2xl));
   width: 100%;
-  margin: var(--_pagination-margin-top);
+  margin-top: var(--_pagination-margin-top);
 
   &:not(:has(>.nds-pagination)) {
     display: none;
